# metamath-to-follow

./: .gitignore  .gitmodules  README.md  main.ipynb  pyproject.toml
.github/workflows/: release-workflow.yml
metamath_to_follow/: generate_recursive_data.py  translator.py  upload.py
src/: generate_grammar.py  translator.py
tests/: set.mm  test_generate_grammar.py  test_generate_recursive_data.py  test_translator.py
